--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "id": "266a3587-86dd-4004-ad52-fd1307e05237",
-  "name": "BILLDIN",
-  "publisher": "Default Publisher",
+  "name": "BILLDIN-API",
+  "publisher": "MaybeClud",
   "version": "1.0.0.0",
   "brief": "",
   "description": "",
